--- a/client/package.json
+++ b/client/package.json
@@ -13,18 +13,18 @@
     "@auth/supabase-adapter": "^1.7.4",
     "@radix-ui/react-toast": "^1.2.6",
     "@reduxjs/toolkit": "^2.6.1",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.48.1",
+    "@supabase/supabase-js": "^2.95.3",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-query": "^5.66.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.6.1",
     "lucide-react": "^0.483.0",
-    "next": "15.1.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^16.2.0-canary.35",
+    "react": "^19.3.0-canary-272441a9-20260209",
+    "react-dom": "^19.3.0-canary-272441a9-20260209",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
@@ -47,9 +47,9 @@
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.15.0",
     "next-pwa": "^5.6.0",
-    "postcss": "^8",
+    "postcss": "^8.5.6",
     "prettier": "^3.5.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5",
     "typescript-eslint": "^8.24.0"
   }
