--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
